--- a/frontend/src/pages/Setup/SetupPage.module.scss
+++ b/frontend/src/pages/Setup/SetupPage.module.scss
@@ -81,7 +81,7 @@
 .setupPage {
     width: 40vw;
     min-width: 650px;
-    margin: 40px 80px 80px 80px;
+    margin: 120px 80px 80px 80px;
     height: max-content;
     border-radius: 8px;
 }
